# MFoML

./: .gitignore  MFoML task 2 synt data.ipynb  README.md  cars_moldova_clean_with_electric.csv  cars_moldova_new_features.csv  cars_moldova_num.csv  data.dvc  pyproject.toml  Катин_В_В_МОМО_Задание_1.ipynb
.dvc/: config  config copy
1st_semester/: Katin_V_V_MFoML_Pracrice_4.ipynb  Katin_V_V_MFoML_practice_3_synth_data.ipynb  Katin_V_V_Practice_3_'Cars_Moldova'_data.ipynb  Катин_В_В_МОМО_Практическое_задание_2_DS_'Cars_Moldova'.ipynb  Катин_В_В_МОМО_задание_2_синтетика.ipynb
3rd_semester/: .gitignore  TS_ES_energy.ipynb  es_clf_data.csv.dvc
