[tool.poetry]
name = "mfoml"
version = "3.0.0"
description = "Homeworks on the mathematical foundations of machine learning. Ural Federal Univercity."
authors = ["Vladimir Katin <katin.v.v@gmail.com>"]
license = "GNUv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.2"
pandas = "^2.1.4"
jupyterlab = "^4.0.11"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
statsmodels = "^0.14.1"
sktime = "^0.24.1"
pmdarima = "^2.0.4"
notebook = "^7.0.7"
prophet = "^1.1.5"
pyarrow = "^14.0.2"
numba = "^0.58.1"
tsai = "^0.3.8"
adtk = "^0.6.2"
pyod = "^1.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
